--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                 // 2. Gemini API呼び出し
                 const genAI = new GoogleGenerativeAI(apiKey);
-                const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
+                const model = genAI.getGenerativeModel({ model: "gemini-pro" });
 
                 const result = await model.generateContent(prompt);
                 const response = await result.response;
@@ -376,4 +376,5 @@
         }
     </script>
 </body>
+
 </html>
