--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 let rowMaxH = 0;
                 const KERF = 5;
 
-                ctx.font = `${Math.max(12, 200/scale)}px Arial`;
+                ctx.font = `${14 / scale}px Arial`;
                 ctx.strokeStyle = '#c0392b'; 
                 ctx.lineWidth = 2 / scale;
 
@@ -396,4 +396,5 @@
     </script>
 </body>
 </html>
+
 
