--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI木工 - アイデアから設計図まで全自動生成</title>
+    <title>AI木工</title>
     <script type="importmap">
       {
         "imports": {
@@ -150,8 +150,8 @@
 <body>
 
     <div class="container">
-        <h1>AI木工（ベータ版）</h1>
-        <p>手元の板サイズを入力すると、AIが「作れる家具」を提案し、設計図と木取り図を自動生成します。</p>
+        <h1>AI木工v0.1</h1>
+        <p>手元の板サイズを入力すると、AIが「作れる木工」を提案します。</p>
 
         <div class="api-note">
             <strong>⚠️ APIキーが必要です</strong><br>
@@ -396,5 +396,6 @@
     </script>
 </body>
 </html>
+
 
 
