--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </table>
 
                 <h3>📐 簡易木取り図（イメージ）</h3>
-                <p style="font-size:0.9rem;">※赤線はカットライン。簡易計算のため、実際の「板の木取」アプリより精度は劣ります。</p>
+                <p style="font-size:0.9rem;">※赤線はカットライン。簡易計算のため、「板の木取」アプリより精度は劣ります。</p>
                 <canvas id="layout-canvas"></canvas>
             </div>
         </div>
@@ -401,6 +401,7 @@
     </script>
 </body>
 </html>
+
 
 
 
