--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                     
                     【条件】
                     - 複雑な曲線カットは無し。直線カットのみ。
-                    //- 部材の合計面積が、板の面積の85%以下になるようにすること（切り代や端材を考慮）。
-                    - 端材が出ないよう大・小の部材を工夫して組合せ、シェルフ、本立て、プランターカバー、すのこ等といった様々なデザインを考えること。
+                    - 部材の合計面積が、板の面積の90%以下になるようにすること（切り代や端材を考慮）。
+                    - シェルフ、本立て、プランターカバー、すのこ等といった様々なデザインを考えること。
                     - 出力は必ず以下のJSON形式のみで行うこと（Markdown記法は不要）。
                     
                     【JSONフォーマット】
@@ -402,6 +402,7 @@
     </script>
 </body>
 </html>
+
 
 
 
