--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI木工 - DIY設計図自動生成</title>
+    <title>AI木工</title>
     <script type="importmap">
       {
         "imports": {
@@ -165,7 +165,7 @@
 <body>
 
     <div class="container">
-        <h1>AI木工 v0.3.1</h1>
+        <h1>AI木工 v0.3</h1>
         <p>作りたいものと材料を入力すると、AIが3Dイメージ図と木取り図を提案します。</p>
 
         <div class="api-note">
@@ -446,3 +446,4 @@
     </script>
 </body>
 </html>
+
